# rust-tracer

./: Cargo.toml
examples/: bench_random_unit_vector.rs  experiment.rs
src/: Notes.md  camera.rs  color.rs  config.rs  conversion.rs  experiment.rs  film.rs  hit.rs  integrator.rs  main.rs  material.rs  png.rs  ppm.rs  random.rs  ray.rs  sampler.rs  scene.rs  sphere.rs  texture.rs  util.rs  vec3.rs  window.rs
src/hit/: aabb.rs  bvh.rs  instance.rs  quad.rs  sphere.rs
src/material/: simple.rs
