[package]
name = "rust-tracer"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
image = "0.24.7"
minifb = "0.25.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"

[[bin]]
name = "main"
path = "src/main.rs"

#[[bin]]
#name = "experiment"
#path = "src/experiment.rs"

[profile.rel-deb]
inherits = "release"
debug = true
split-debuginfo = "packed"
